--- a/templates/hello.templ
+++ b/templates/hello.templ
@@ -1,5 +1,5 @@
 package templates
 
 templ Hello(name string) {
-<div class="bg-green-50">Hello, {name}</div>
+	<div class="text-3xl text-blue-500">Hello, { name }!</div>
 }
