--- a/templates/layout.templ
+++ b/templates/layout.templ
@@ -1,15 +1,17 @@
 package templates
 
 templ Layout(content templ.Component) {
+	<!DOCTYPE html>
 	<html lang="en">
 		<head>
 			<meta charset="utf-8"/>
 			<title>Pedro Binotto</title>
-			<link href="/css/output.css" rel="stylesheet"/>
 			<script src="https://unpkg.com/htmx.org@1.9.8"></script>
 			<script src="https://unpkg.com/htmx.org/dist/ext/multi-swap.js"></script>
+			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+			<link href="/css/output.css" rel="stylesheet"/>
 		</head>
-		<body>
+		<body class="bg-slate-200">
 			@content
 		</body>
 	</html>
