--- a/templates/layout.templ
+++ b/templates/layout.templ
@@ -11,8 +11,14 @@ templ Layout(content templ.Component) {
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 			<link href="/css/output.css" rel="stylesheet"/>
 		</head>
-		<body class="bg-slate-200">
-			@content
+		<body>
+			<div class="flex flex-col min-h-screen">
+				<header class="sticky top-0 bg-white shadow-md p-4 z-50">Header</header>
+				<main class="w-full max-w-3xl mx-auto p-6 min-h-screen">
+					@content
+				</main>
+				<footer class="bg-gray-300 p-4">Footer</footer>
+			</div>
 		</body>
 	</html>
 }
