--- a/templates/hello.templ
+++ b/templates/hello.templ
@@ -1,14 +1,63 @@
 package templates
 
 templ Hello(name string) {
-	<article class="prose">
-		<h1>Tailwind Typography Example</h1>
-		<div>Hello, { name }!</div>
-		<p>This is a paragraph with nicely spaced text.</p>
-		<blockquote>A beautifully styled blockquote.</blockquote>
-		<ul>
-			<li>Bullet point one</li>
-			<li>Bullet point two</li>
-		</ul>
+	<article class="prose dark:prose-invert mb-10">
+		<h1>pedro's <br/>really cool online presence</h1>
+		<div class="grid grid-cols-2 gap-4">
+			<div>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+					magna
+					aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat.
+					Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+					sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				</p>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+					magna
+					aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat.
+					Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+					sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				</p>
+			</div>
+			<div>
+				<h2 class="mt-0">Blogs</h2>
+				<hr class="mb-10"/>
+				<h3>Tailwind Typography Example</h3>
+				<p>Hello, { name }!</p>
+				<p>This is a paragraph with nicely spaced text.</p>
+				<blockquote>A beautifully styled blockquote.</blockquote>
+				<ul>
+					<li>Bullet point one</li>
+					<li>Bullet point two</li>
+				</ul>
+				<hr class="mb-10"/>
+				<h3>Tailwind Typography Example</h3>
+				<div>Hello, { name }!</div>
+				<p>This is a paragraph with nicely spaced text.</p>
+				<blockquote>A beautifully styled blockquote.</blockquote>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+					magna
+					aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat.
+					Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+					sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+				</p>
+				<blockquote>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+					dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+					commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+					pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
+					laborum.
+				</blockquote>
+				<ul>
+					<li>Bullet point one</li>
+					<li>Bullet point two</li>
+				</ul>
+			</div>
+		</div>
 	</article>
 }
