--- a/templates/layout.templ
+++ b/templates/layout.templ
@@ -1,23 +1,32 @@
 package templates
 
+import "github.com/PedroBinotto/website/templates/components"
+
 templ Layout(content templ.Component) {
 	<!DOCTYPE html>
 	<html lang="en">
 		<head>
 			<meta charset="utf-8"/>
 			<title>Pedro Binotto</title>
+			<link rel="preconnect" href="https://fonts.googleapis.com"/>
+			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+			<link
+				href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Inconsolata:wght@200..900&family=Jacquard+12+Charted&display=swap"
+				rel="stylesheet"
+			/>
 			<script src="https://unpkg.com/htmx.org@1.9.8"></script>
 			<script src="https://unpkg.com/htmx.org/dist/ext/multi-swap.js"></script>
-			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+			<script src="/static/js/dark-mode.js"></script>
 			<link href="/css/output.css" rel="stylesheet"/>
+			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		</head>
-		<body>
+		<body class="themed-view">
 			<div class="flex flex-col min-h-screen">
-				<header class="sticky top-0 bg-white shadow-md p-4 z-50">Header</header>
-				<main class="w-full max-w-3xl mx-auto p-6 min-h-screen">
+				@components.SiteHeader()
+				<main class="w-full max-w-6xl mx-auto min-h-screen py-6 px-4 lg:px-0">
 					@content
 				</main>
-				<footer class="bg-gray-300 p-4">Footer</footer>
+				@components.SiteFooter()
 			</div>
 		</body>
 	</html>
