--- a/templates/layout.templ
+++ b/templates/layout.templ
@@ -7,7 +7,7 @@ templ Layout(content templ.Component) {
 	<html lang="en">
 		<head>
 			<meta charset="utf-8"/>
-			<title>Pedro Binotto</title>
+			<title>pedro binotto ❚</title>
 			<link rel="preconnect" href="https://fonts.googleapis.com"/>
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
 			<link
