--- a/templates/components/dark-mode-btn.templ
+++ b/templates/components/dark-mode-btn.templ
@@ -1,9 +1,13 @@
 package components
 
+import "github.com/PedroBinotto/website/templates/components/widgets"
+
 templ DarkModeBtn() {
-	<button onclick="toggleDarkMode()" class="px-4 py-2 rounded-lg">
-		<!-- TODO: (maybe) componentizar "Icons": -->
+	@widgets.Btn(widgets.BtnProps{
+		Class:   "rounded-3xl p-2",
+		OnClick: "toggleDarkMode()",
+	}) {
 		<img src="/static/assets/sun-svgrepo-com.svg" class="dark:hidden dark:invert size-6" alt="theme: light"/>
 		<img src="/static/assets/moon-svgrepo-com.svg" class="hidden dark:inline dark:invert size-6" alt="theme: dark"/>
-	</button>
+	}
 }
