--- a/templates/components/site-footer.templ
+++ b/templates/components/site-footer.templ
@@ -8,20 +8,24 @@ templ SiteFooter() {
 					<div class="text-right">
 						<!-- right column -->
 						<p class="my-2">
-							Contact Information:
+							Pedro Santi Binotto
 						</p>
 						<p class="my-2">
-							e-mail @ <span class="font-code">pedrosantibinotto@gmail.com</span>
+							Florianópolis, SC, Brasil
 						</p>
 						<p class="my-2">
-							BLa bla bla
+							<a href="mailto:pedrosantibinotto@gmail.com">
+								<span class="font-code">pedrosantibinotto@gmail.com</span>
+							</a>
 						</p>
 					</div>
 					<div class="text-left">
 						<!-- left column -->
 						<p class="my-2">
-							Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-							Excepteur
+							Website built with Go, Templ, HTMX, and TailwindCSS
+						</p>
+						<p class="my-2">
+							<a href="https://www.github.com/PedroBinotto/website">Source code on Github</a>
 						</p>
 					</div>
 				</div>
