--- a/templates/components/site-header.templ
+++ b/templates/components/site-header.templ
@@ -1,25 +1,40 @@
 package components
 
 templ SiteHeader() {
-	<header class="sticky top-0 z-50 themed-view">
-		<div class="p-4 w-full max-w-6xl mx-auto border-b border-b-text-light dark:border-b-text-dark">
-			<div class="flex justify-between items-center">
-				<div class="flex items-center gap-12">
-					<div class="font-mono text-lg">
-						<a href="/">
-							pedro binotto <span class="font-bold">$</span> <span class="animate-ping">❚</span>
-						</a>
-					</div>
-					<div class="h-10 w-px bg-gray-300 dark:bg-gray-600"></div>
-					<nav class="flex gap-6">
-						<a href="/">Home</a>
-						<a href="/resume">Resume</a>
-						<a href="/hello">hello</a>
-						<a href="/blogs">Blogs</a>
-					</nav>
-				</div>
-				@DarkModeBtn()
-			</div>
-		</div>
-	</header>
+<header class="sticky top-0 z-50 themed-view">
+  <div class="p-4 w-full max-w-6xl mx-auto border-b border-b-text-light dark:border-b-text-dark">
+    <div class="flex justify-between items-center">
+      <div class="flex items-center gap-12">
+        <div class="font-mono text-lg">
+          <a href="/" class="no-underline whitespace-nowrap">
+            pedro binotto <span class="font-bold">$</span> <span class="animate-ping">❚</span>
+          </a>
+        </div>
+        <div class="h-10 w-px bg-gray-300 dark:bg-gray-600 hidden md:block"></div>
+        <div class="hidden md:contents">
+          <!-- Desktop -->
+          <nav class="flex gap-6">
+            <a href="/">Home</a>
+            <a href="/resume">Resume</a>
+            <a href="/hello">hello</a>
+            <a href="/blogs">Blogs</a>
+          </nav>
+        </div>
+      </div>
+      <div class="flex gap-6">
+        @NavbarBtn()
+        @DarkModeBtn()
+      </div>
+    </div>
+    <div class="hidden" id="mobile-menu">
+      <!-- Mobile-->
+      <div class="flex flex-col space-y-3 py-4">
+        <a href="/">Home</a>
+        <a href="/resume">Resume</a>
+        <a href="/hello">hello</a>
+        <a href="/blogs">Blogs</a>
+      </div>
+    </div>
+  </div>
+</header>
 }
