--- a/templates/components/navbar-btn.templ
+++ b/templates/components/navbar-btn.templ
@@ -10,7 +10,7 @@ templ NavbarBtn() {
 		<img
 			id="menu-icon"
 			src="/static/assets/hamburger.svg"
-			class="dark:invert size-6 w-6 h-6 transition-transform duration-300"
+			class="dark:invert size-6 w-6 h-6 transition-transform duration-300 rotate-90"
 		/>
 	}
 }
