--- a/templates/layout.templ
+++ b/templates/layout.templ
@@ -16,7 +16,7 @@ templ Layout(content templ.Component) {
 			/>
 			<script src="https://unpkg.com/htmx.org@1.9.8"></script>
 			<script src="https://unpkg.com/htmx.org/dist/ext/multi-swap.js"></script>
-			<script src="/static/js/dark-mode.js"></script>
+			<script src="/static/js/utils.js"></script>
 			<script src="/static/js/mobile-navbar.js"></script>
 			<link href="/css/output.css" rel="stylesheet"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
