--- a/templates/components/site-footer.templ
+++ b/templates/components/site-footer.templ
@@ -14,15 +14,15 @@ templ SiteFooter() {
 							Florianópolis, SC, Brasil
 						</p>
 						<p class="my-2">
-							<a href="mailto:pedrosantibinotto@gmail.com">
-								<span class="font-code">pedrosantibinotto@gmail.com</span>
-							</a>
+							@MailLink()
 						</p>
 					</div>
 					<div class="text-left">
 						<!-- left column -->
 						<p class="my-2">
-							Website built with Go, Templ, HTMX, and TailwindCSS
+							Website built with <a href="https://go.dev/">Go</a>, <a href="https://templ.guide/">Templ</a>, <a
+	href="https://htmx.org/"
+>HTMX</a>, and <a href="https://tailwindcss.com/">TailwindCSS</a>
 						</p>
 						<p class="my-2">
 							<a href="https://www.github.com/PedroBinotto/website">Source code on Github</a>
