--- a/templates/hello.templ
+++ b/templates/hello.templ
@@ -2,7 +2,7 @@ package templates
 
 templ Hello(name string) {
 	<article class="prose dark:prose-invert mb-10">
-		<h1>pedro's <br/>really cool online presence</h1>
+		<h1 class="normal-case">pedro's <br/>really cool online presence</h1>
 		<div class="grid lg:grid-cols-2 grid-cols-1 gap-4">
 			<div>
 				<p>
