--- a/templates/components/site-header.templ
+++ b/templates/components/site-header.templ
@@ -1,16 +1,14 @@
 package components
 
+import "github.com/PedroBinotto/website/templates/components/widgets"
+
 templ SiteHeader() {
 	<header class="sticky top-0 z-50 themed-view">
 		<div class="p-4 w-full max-w-6xl mx-auto border-b border-b-text-light dark:border-b-text-dark">
 			<div class="flex justify-between items-center">
 				<div class="flex items-center gap-12">
-					<div class="font-mono text-lg">
-						<a href="/" class="no-underline whitespace-nowrap">
-							pedro binotto <span class="font-bold">$</span> <span class="animate-ping">❚</span>
-						</a>
-					</div>
-					<div class="h-10 w-px bg-gray-300 dark:bg-gray-600 hidden md:block"></div>
+					@SiteTitle()
+					@widgets.Divider(widgets.DividerProps{Class: "hidden md:block"})
 					<div class="hidden md:contents">
 						<!-- Desktop -->
 						<nav class="flex gap-6">
