--- a/templates/layout.templ
+++ b/templates/layout.templ
@@ -11,7 +11,7 @@ templ Layout(content templ.Component) {
 			<link rel="preconnect" href="https://fonts.googleapis.com"/>
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
 			<link
-				href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Inconsolata:wght@200..900&family=Jacquard+12+Charted&display=swap"
+				href="https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&family=Inconsolata:wght@200..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
 				rel="stylesheet"
 			/>
 			<script src="https://unpkg.com/htmx.org@1.9.8"></script>
@@ -21,7 +21,7 @@ templ Layout(content templ.Component) {
 			<link href="/css/output.css" rel="stylesheet"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		</head>
-		<body class="themed-view">
+		<body class="themed-view scroll-smoth">
 			<div class="flex flex-col min-h-screen">
 				@components.SiteHeader()
 				<main class="w-full max-w-6xl mx-auto min-h-screen py-6 px-4 lg:px-0">
