--- a/templates/components/mail-link.templ
+++ b/templates/components/mail-link.templ
@@ -2,6 +2,6 @@ package components
 
 templ MailLink() {
 	<a href="mailto:pedrosantibinotto@gmail.com">
-		<span class="font-code">pedrosantibinotto@gmail.com</span>
+		pedrosantibinotto@gmail.com
 	</a>
 }
