--- a/templates/hello.templ
+++ b/templates/hello.templ
@@ -1,7 +1,7 @@
 package templates
 
 templ Hello(name string) {
-	<article class="prose dark:prose-invert mb-10">
+	<article class="prose md:prose-md dark:prose-invert mb-10">
 		<h1 class="normal-case">pedro's <br/>really cool online presence</h1>
 		<div class="grid lg:grid-cols-2 grid-cols-1 gap-4">
 			<div>
