--- a/templates/components/article.templ
+++ b/templates/components/article.templ
@@ -1,7 +1,7 @@
 package components
 
 templ Article() {
-	<article class="prose md:prose-md dark:prose-invert">
+	<article class="prose md:prose-md dark:prose-invert dark:prose-dark">
 		{ children... }
 	</article>
 }
