--- a/templates/layout.templ
+++ b/templates/layout.templ
@@ -8,6 +8,7 @@ templ Layout(content templ.Component) {
 		<head>
 			<meta charset="utf-8"/>
 			<title>pedro binotto ❚</title>
+			<link rel="icon" href="static/assets/favicon.ico" type="image/x-icon"/>
 			<link rel="preconnect" href="https://fonts.googleapis.com"/>
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
 			<link
@@ -17,7 +18,6 @@ templ Layout(content templ.Component) {
 			<script src="https://unpkg.com/htmx.org@1.9.8"></script>
 			<script src="https://unpkg.com/htmx.org/dist/ext/multi-swap.js"></script>
 			<script src="/static/js/utils.js"></script>
-			<script src="/static/js/mobile-navbar.js"></script>
 			<link href="/css/output.css" rel="stylesheet"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 		</head>
