--- a/templates/components/site-header.templ
+++ b/templates/components/site-header.templ
@@ -16,6 +16,7 @@ templ SiteHeader() {
 							<a href="/resume">resume</a>
 							<a href="/hello">hello</a>
 							<a href="/blogs">blogs</a>
+							<a href="/playground">playground</a>
 						</nav>
 					</div>
 				</div>
@@ -31,6 +32,7 @@ templ SiteHeader() {
 					<a href="/resume">resume</a>
 					<a href="/hello">hello</a>
 					<a href="/blogs">blogs</a>
+					<a href="/playground">playground</a>
 				</div>
 			</div>
 		</div>
