--- a/templates/index.templ
+++ b/templates/index.templ
@@ -17,8 +17,70 @@ templ Index() {
 				<img sizes class="dark:invert object-contain w-full h-auto mt-0" src="/static/assets/macintosh.png"/>
 			</div>
 			<div class="md:w-1/2">
-				<h2 class="text-3xl font-bold mb-4 mt-0">Your Headline Here</h2>
+				<h2 class="text-3xl font-bold mb-4 mt-0">Thanks for coming!</h2>
+				<p class="font-semibold text-lg">
+					I'm a software developer and human being based in Florianópolis, Brasil.
+				</p>
+				<p>
+					Thank you for visiting my online space! Here's some of what you can expect to find here:
+				</p>
+				<ul>
+					<li>
+						<span class="font-semibold">Commentary and blog posts on my interests</span> (music, literature, programming,
+						<em>linux-unix-computery-nerdy-stuff</em>);
+					</li>
+					<li>
+						<span class="font-semibold"><span class="italic font-semibold">Some</span> dev-blogging</span>, whenever I
+						have something interesting enough going on;
+					</li>
+					<li><span class="font-semibold">Experiments</span> with non-commercial web-design, typography, etc.;</li>
+					<li><span class="font-semibold">Borrowed nostalgia</span> for the unremembered 2000s;</li>
+					<li><span class="font-semibold">Lastly, <a href="/resume" class="font-semibold">my CV</a></span>. Check it!</li>
+				</ul>
 			</div>
+		</div>
+		<div>
+			<h4>
+				This website is an online portfolio and an ongoing experiment
+				<br/>
+				<span class="italic font-semibold">also shelter from the terrible horrible angry nasty big-web.</span>
+			</h4>
+			<p>
+				The website itself, though constructed with a lot of cool modern technology (the snotty hipster side of it, at least
+				— no <span class="italic">React-Redux-whateverelse</span> monstrosity here, folks!), is my love letter
+				to Tim Berners-Lee's vision for
+				the Web. I do believe computers could be used for creating something actually worth looking at! This is my attempt
+				at it.
+				<a href="https://www.github.com/PedroBinotto/website">
+					The source code is openly
+					available on Github
+				</a>,
+				too!
+			</p>
+			<p class="font-semibold">
+				If you've accidentally stumbled upon this website through the crooked, meandering paths of the World Wide Web, I
+				hope
+				you enjoy your stay! Please check out the fun bits: <a href="/playground">playground</a>, <a
+	href="/blogs"
+>blogs</a>.
+			</p>
+			<p class="font-semibold">
+				If, however, your arrival was not accidental, that probably means you're looking to hire me! In which case, I'd
+				strongly advise you <span class="italic font-semibold underline decoration-1">do</span>. Please check my <a
+	href="/resume"
+>resume</a> and
+				contact me @
+				<span>
+					@components.MailLink()
+				</span> as soon
+				as possible.
+			</p>
+			<p>
+				You can also find me on <a href="#">tilde.town</a>, <a href="#">Github</a>, and in the real world.
+			</p>
+			<p class="text-center">
+				The end!
+			</p>
 		</div>
 	}
 }
