--- a/templates/components/site-header.templ
+++ b/templates/components/site-header.templ
@@ -15,8 +15,8 @@ templ SiteHeader() {
 							<a href="/">home</a>
 							<a href="/resume">resume</a>
 							<a href="/hello">hello</a>
-							<a href="/blogs">blogs</a>
-							<a href="/playground">playground</a>
+							<!-- <a href="/blogs">blogs</a> -->
+							<!-- <a href="/playground">playground</a> -->
 						</nav>
 					</div>
 				</div>
@@ -31,8 +31,8 @@ templ SiteHeader() {
 					<a href="/">home</a>
 					<a href="/resume">resume</a>
 					<a href="/hello">hello</a>
-					<a href="/blogs">blogs</a>
-					<a href="/playground">playground</a>
+					<!-- <a href="/blogs">blogs</a> -->
+					<!-- <a href="/playground">playground</a> -->
 				</div>
 			</div>
 		</div>
