mailbox obfuscation and SEO

--- a/templates/components/mail-link.templ
+++ b/templates/components/mail-link.templ
@@ -1,7 +1,8 @@
 package components
 
 templ MailLink() {
-	<a href="mailto:pedrosantibinotto@gmail.com">
-		pedrosantibinotto@gmail.com
+	<a
+		href="mailto: &#112;&#101;&#100;&#114;&#111;&#115;&#97;&#110;&#116;&#105;&#98;&#105;&#110;&#111;&#116;&#116;&#111;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;">
+		&#112;&#101;&#100;&#114;&#111;&#115;&#97;&#110;&#116;&#105;&#98;&#105;&#110;&#111;&#116;&#116;&#111;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;
 	</a>
 }
