meta description tag

--- a/templates/layout.templ
+++ b/templates/layout.templ
@@ -8,6 +8,7 @@ templ Layout(content templ.Component) {
 		<head>
 			<meta charset="utf-8"/>
 			<title>pedro binotto ❚</title>
+			<meta name="description" content="Pedro Binotto; Software developer based in Florianópolis, Brazil."/>
 			<link rel="icon" href="static/assets/favicon.ico" type="image/x-icon"/>
 			<link rel="preconnect" href="https://fonts.googleapis.com"/>
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
