--- a/templates/index.templ
+++ b/templates/index.templ
@@ -4,7 +4,7 @@ import "github.com/PedroBinotto/website/templates/components"
 
 templ Index() {
 	@components.Article() {
-		<div id="landing-container" class="transition-[height] duration-300 ease-out">
+		<div class="transition-[height] duration-300 ease-out h-screen">
 			<h1 class="mx-auto mt-0">
 				<div class="text-3xl md:text-5xl font-semibold animate-appear animate-delay-500">welcome to</div>
 				<div class="text-3xl md:text-5xl font-semibold animate-appear animate-delay-1000">pedro's</div>
