minor corrections and resume updates

--- a/templates/components/site-footer.templ
+++ b/templates/components/site-footer.templ
@@ -6,7 +6,7 @@ templ SiteFooter() {
 			<div class="mx-auto flex gap-6">
 				<div class="grid grid-cols-2 gap-6 max-w-2xl opacity-70 text-sm font-light">
 					<div class="text-right">
-						<!-- right column -->
+						<!-- left column -->
 						<p class="my-2">
 							Pedro Santi Binotto
 						</p>
@@ -18,7 +18,7 @@ templ SiteFooter() {
 						</p>
 					</div>
 					<div class="text-left">
-						<!-- left column -->
+						<!-- right column -->
 						<p class="my-2">
 							Website built with <a href="https://go.dev/">Go</a>, <a href="https://templ.guide/">Templ</a>, <a
 	href="https://htmx.org/"
@@ -26,6 +26,11 @@ templ SiteFooter() {
 						</p>
 						<p class="my-2">
 							<a href="https://www.github.com/PedroBinotto/website">Source code on Github</a>
+						</p>
+						<p class="my-2">
+							<a href="https://etherscan.io/address/0x71da04Ef09DDb2665128E4B7D6d7E9D9c7F60981/">
+								Donate ETH
+							</a>
 						</p>
 					</div>
 				</div>
