--- a/templates/index.templ
+++ b/templates/index.templ
@@ -34,7 +34,7 @@ templ Index() {
 						have something interesting enough going on;
 					</li>
 					<li><span class="font-semibold">Experiments</span> with non-commercial web-design, typography, etc.;</li>
-					<li><span class="font-semibold">Borrowed nostalgia</span> for the unremembered 2000s;</li>
+					<li><span class="font-semibold">Borrowed nostalgia</span> { "for" } the unremembered 2000s;</li>
 					<li><span class="font-semibold">Lastly, <a href="/resume" class="font-semibold">my CV</a></span>. Check it!</li>
 				</ul>
 			</div>
