fix running in dev with air

--- a/templates/index.templ
+++ b/templates/index.templ
@@ -22,12 +22,12 @@ templ Index() {
 					I'm a software developer and human being based in Florianópolis, Brasil.
 				</p>
 				<p>
-					Thank you for visiting my online space! Here's some of what you can expect to find here:
+					Thank you for visiting my online space! This is some of what you can expect to find here:
 				</p>
 				<ul>
 					<li>
 						<span class="font-semibold">Commentary and blog posts on my interests</span> (music, literature, programming,
-						<em>linux-unix-computery-nerdy-stuff</em>);
+						<em>linux-computer-nerdy-stuff</em>);
 					</li>
 					<li>
 						<span class="font-semibold"><span class="italic font-semibold">Some</span> dev-blogging</span>, whenever I
@@ -47,7 +47,7 @@ templ Index() {
 			</h4>
 			<p>
 				The website itself, though constructed with a lot of cool modern technology (the snotty hipster side of it, at least
-				— no <span class="italic">React-Redux-whateverelse</span> monstrosity here, folks!), is my love letter
+				— no <span class="italic">React-Redux-whateverelse</span> monstrosity here), is my love letter
 				to Tim Berners-Lee's vision for
 				the Web. I do believe computers could be used for creating something actually worth looking at! This is my attempt
 				at it.
@@ -65,7 +65,7 @@ templ Index() {
 >blogs</a>.
 			</p>
 			<p class="font-semibold">
-				If, however, your arrival was not accidental, that probably means you're looking to hire me! In which case, I'd
+				If, however, your arrival was not accidental, that might you're looking to hire me! In which case, I'd
 				strongly advise you <span class="italic font-semibold underline decoration-1">do</span>. Please check my <a
 	href="/resume"
 >resume</a> and
@@ -76,7 +76,9 @@ templ Index() {
 				as possible.
 			</p>
 			<p>
-				You can also find me on <a href="#">tilde.town</a>, <a href="#">Github</a>, and in the real world.
+				You can also find me on <a href="https://tilde.town/~pedro_binotto/">tilde.town</a>, <a
+	href="https://www.github.com/PedroBinotto"
+>Github</a>, and in the real world.
 			</p>
 			<p class="text-center">
 				The end!
