--- a/templates/resume.templ
+++ b/templates/resume.templ
@@ -99,12 +99,10 @@ templ Resume() {
 			<li>Neovim plugin development;</li>
 			<li>Open source work;</li>
 		</ul>
-		<div class="mx-auto w-max text-center opacity-70 text-sm font-light">
-			<p>
-				<a href="/static/assets/pedro_binotto-resume.pdf" download>
-					Download as PDF
-				</a>
-			</p>
-		</div>
+		<p class="text-center opacity-70 text-sm font-light">
+			<a href="/static/assets/pedro_binotto-resume.pdf" download>
+				Download as PDF
+			</a>
+		</p>
 	}
 }
