--- a/templates/components/site-header.templ
+++ b/templates/components/site-header.templ
@@ -14,8 +14,8 @@ templ SiteHeader() {
 						<nav class="flex gap-6">
 							<a href="/">home</a>
 							<a href="/resume">resume</a>
+							<a href="/blogs">blogs</a>
 							<a href="/hello">hello</a>
-							<!-- <a href="/blogs">blogs</a> -->
 							<!-- <a href="/playground">playground</a> -->
 						</nav>
 					</div>
@@ -30,8 +30,8 @@ templ SiteHeader() {
 				<div class="flex flex-col space-y-3 py-4">
 					<a href="/">home</a>
 					<a href="/resume">resume</a>
+					<a href="/blogs">blogs</a>
 					<a href="/hello">hello</a>
-					<!-- <a href="/blogs">blogs</a> -->
 					<!-- <a href="/playground">playground</a> -->
 				</div>
 			</div>
