--- a/templates/hello.templ
+++ b/templates/hello.templ
@@ -5,18 +5,50 @@ import "github.com/PedroBinotto/website/templates/components"
 templ Hello() {
 	@components.Article() {
 		<h1>Hello, world!</h1>
-		<p class="font-semibold text-lg">
-			Lorem ipsum
+		<p class="font-semibold text-lg lowercase">
+			on myself & the purpose of this website
 		</p>
 		<p>
-			Lorem ipsum
+			This website was born as a little tech experiment on the proposed "<a
+	href="https://github.com/TomDoesTech/GOTTH"
+	target="_blank"
+>GOTTH</a>" stack (<em>Go, Tailwind, Templ, HTMX</em>) — that, and the need of a personal web
+			page/online presence of sorts — though it was never intended to be a typical professional
+			showcase or personal portfolio (not exclusively, at least), there had to be <em>something</em>; there's just no way
+			a web developer with more than five years on the job doesn't have his own little piece of turf to show off on the WWW!
+			So, now I had a defined scope for this little project.
+		</p>
+		<p>
+			I knew right from the start that I wanted my web-facing persona to be a bit of a statement so, on top of the
+			technical
+			esotericism, I decided to style it like an old-school
+			<a href="https://en.wikipedia.org/wiki/Zine#1970s_and_punk">
+				punk
+				zine
+			</a> with the high-contrast color palette, bold typography and posterized PNGs, combined with some elements I pulled
+			from <a href="https://neocities.org/">Web 1.0 nostalgia nuggets</a>
+			and other hackers' funny
+			looking personal blogs I came across and kept bookmarked over the years (some references: <a
+	href="https://scripter.co/"
+>1</a>, <a href="http://thedarnedestthing.com">2</a>).
+		</p>
+		<p>
+			As it stands, <a href="/">pedrobinotto.xyz</a> is still a work in progress in many aspects, from the homebrewed
+			blogging feature to the minor bugs and details that are surely yet to be noticed — this little passion project could
+			never do with deadlines, as I work on it exclusively in what little free time I have. There is no real goal to it
+			other than my own amusement — tinkering with it, publishing my ramblings, what have you — I don't even have a real way
+			to know if anyone ever gets to read these words unless they decide to
+			<a href="mailto:contato@pedrobinotto.xyz">
+				say
+				hello
+			</a>, and that's by design.
 		</p>
 		<hr/>
 		<div class="flex flex-col md:pt-4 md:flex-row">
 			<div class="md:w-1/2">
 				<h2 class="text-3xl font-bold mb-4 mt-0">About me</h2>
 				<p>
-					Lorem ipsum
+					I didn't get around to writing the text for this bit yet, but you may have this picture for now.
 				</p>
 			</div>
 			<div class="md:w-1/2 mb-6 md:mb-0">
